<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homefragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="#E1E1E1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="BottomAppBar" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="#F5B507"
        android:text="@string/button03"
        android:textColor="#444040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:backgroundTint="#F5B507"
        android:text="@string/button02"
        android:textColor="#444040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/buttoncolor"
        android:text="@string/button01"
        android:textColor="#444040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="193dp"
        android:layout_height="@dimen/priceheight"
        android:text="@string/itemprice"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/topicwigth"
        android:layout_height="@dimen/topicheight"
        android:text="@string/item"
        android:textSize="@dimen/tpictextsize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="@dimen/picwidth"
        android:layout_height="@dimen/picheight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104"
        app:srcCompat="@drawable/product" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="@dimen/widthoftext"
        android:layout_height="75dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="@dimen/textsizeoftext"
        tools:ignore="MissingConstraints,TextSizeCheck,TextSizeCheck"
        tools:layout_editor_absoluteX="200dp"
        tools:layout_editor_absoluteY="191dp"
        tools:text="@string/itemdescription" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="56dp"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bottomAppBar2"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar2" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_home_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar2"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar2" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_chat_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar2" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_list_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar2"
        tools:layout_editor_absoluteX="151dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>