<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#F5B507"
    tools:context=".Home2Fragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:layout_editor_absoluteX="-67dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomNavigationView"
        android:layout_width="469dp"
        android:layout_height="61dp"
        android:background="#E1E1E1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_home_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView17"
            app:layout_constraintHorizontal_bias="0.558"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.476" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_list_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView18"
            app:layout_constraintHorizontal_bias="0.711"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.476" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_chat_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView19"
            app:layout_constraintHorizontal_bias="0.777"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.476" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_account_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.764"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.238" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="361dp"
        android:layout_height="76dp"
        android:text="@string/Procedure"
        android:textColor="@color/textcolor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <EditText
        android:id="@+id/editTextTextMultiLine4"
        android:layout_width="288dp"
        android:layout_height="143dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/text"
        android:textColor="#444040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249" />

    <Button
        android:id="@+id/button4"
        android:layout_width="216dp"
        android:layout_height="72dp"
        android:backgroundTint="#F5B507"
        android:text="@string/Button"
        android:textColor="#444040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />

</androidx.constraintlayout.widget.ConstraintLayout>